src/objects/DRE__DRE_Event_Log__c.object
<CustomObject>
    <fields>
        <fullName>DRE__CPU_Time_Elapsed__c</fullName>
        <label>CPU Time Elapsed (ms)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRE__CPU_Time__c</fullName>
        <label>CPU Time (ms)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRE__DRE_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DRE Rule</label>
        <referenceTo>DRE__DRE_Rule__c</referenceTo>
        <relationshipLabel>Event Logs</relationshipLabel>
        <relationshipName>DRE_Event_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DRE__Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DRE__Operation__c</fullName>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APPLY</fullName>
                </value>
                <value>
                    <fullName>EVALUATE</fullName>
                </value>
                <value>
                    <fullName>START</fullName>
                </value>
                <value>
                    <fullName>FINISH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRE__Pass_Count__c</fullName>
        <label>Pass Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRE__RelatedId__c</fullName>
        <label>Related ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRE__SessionId__c</fullName>
        <label>Session ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRE__Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>INFO</fullName>
                    <default>true</default>
                    <label>INFO</label>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DRE Event Log</label>
    <nameField>
        <displayFormat>DRELOG-{00000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DRE Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>